# ME_700_Assignment_2

./: README.md  assignment_2_genAluse.txt  pyproject.toml  test.py
.github/workflows/: test.yml
examples/: frame_analysis_example.py
src/: __init__.py
src/frame_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/frame_solver/: __init__.py  frame_analysis.py
src/frame_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: .coverage  test_frame_analysis.py
